# astral-turf-fifa

./: .dockerignore  .env.example  .env.production  .gitignore  .lighthouserc-desktop.json  .lighthouserc-mobile.json  .prettierignore  .prettierrc  100_PERCENT_COMPLETE.md  ACCESSIBILITY.md  ADDITIONAL_TASKS_COMPLETE_DISCOVERY.md  ADVANCED_FEATURES_IMPLEMENTATION_REPORT.md  AGENT_TODO_LIST.md  AI_FOOTBALL_INTELLIGENCE_DOCUMENTATION.md  AI_TRAINING_OPTIMIZATION_COMPLETE.md  ALL_TODOS_COMPLETE.md  ALL_TRANSPARENCY_FIXES_COMPLETE.md  ALL_TRANSPARENCY_REMOVED_FINAL.md  ANALYTICS_API_COMPLETE.md  ANALYTICS_API_COMPLETE_SUMMARY.md  ANALYTICS_API_COMPLETION_REPORT.md  API_REFERENCE.md  ASTRAL_TURF_TODO_SUMMARY.md  ATLAS_DEPLOYMENT_GUIDE.md  ATLAS_OPERATIONAL_READINESS.md  AUTO_SWAP_FIX.md  AUTO_SWAP_SESSION_SUMMARY.md  App.tsx  BACKEND_APIS_COMPLETION_REPORT.md  BACKEND_ARCHITECTURE.md  BROWSER_COMPATIBILITY_FIXES.md  CATALYST_PERFORMANCE_DEPLOYMENT.md  CATALYST_PERFORMANCE_SUMMARY.md  CHALLENGE_SYSTEM_COMPLETION_REPORT.md  CLAUDE.md  CODEBASE_CLEANUP_REPORT.md  CODE_QUALITY_100_PERCENT_COMPLETE.md  CODE_QUALITY_FINAL_REPORT.md  CODE_QUALITY_PROGRESS_REPORT.md  CODE_QUALITY_SESSION_OCT1_SUMMARY.md  (+366 more)
.claude/: settings.local.json
api/: auth.js  health.js  health.ts
backend/: .env.example  .gitignore  API_TESTING.md  DATABASE.md  DEPLOYMENT_SUCCESS.md  MIGRATION_EXECUTION_GUIDE.md  PHASE1_COMPLETE_SUMMARY.md  PHASE2_COMPLETE_REPORT.md  PHASE2_FINAL_STATUS.md  PHASE2_PROGRESS.md  PHASE2_QUICK_REFERENCE.md  PHASE3_PLAN.md  (+25 more)
original_zip/src-tauri/: Cargo.toml  tauri.conf.json
(+1128 files in other folders)
