[package]
name = "astral-turf"
version = "8.0.0"
description = "AI-powered soccer tactical planner"
authors = ["Astral Turf Team"]
license = "ISC"
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "shell-open", "fs-all", "dialog-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
